Home page heading color contrast fix

--- a/css/index.css
+++ b/css/index.css
@@ -627,7 +627,7 @@ label {
 }
 
 .promoted-articles__title {
-  color: rgba(255, 255, 255, 1);
+  color: rgba(255, 234, 43, 1);
   font-family: "Futura", Arial, Helvetica, sans-serif;
   font-size: 3rem;
   font-weight: 700;
